[gd_scene load_steps=5 format=3 uid="uid://1s3ermyfva8a"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_xfb6k"]
[ext_resource type="Theme" uid="uid://1y7ptsr0yfcn" path="res://art/new_theme.tres" id="3_ewask"]
[ext_resource type="PackedScene" uid="uid://d4g1bfp2j4tpl" path="res://scenes/card.tscn" id="3_sxsh2"]
[ext_resource type="AudioStream" uid="uid://d20te3d060af1" path="res://art/blipSelect.wav" id="4_sii4n"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_xfb6k")

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 635.0
offset_bottom = 80.0
theme = ExtResource("3_ewask")
theme_override_font_sizes/normal_font_size = 48
text = "Discardant"

[node name="NewGame" type="Button" parent="."]
offset_left = 5.0
offset_top = 100.0
offset_right = 173.0
offset_bottom = 145.0
theme = ExtResource("3_ewask")
theme_override_font_sizes/font_size = 36
text = "New Game"

[node name="Options" type="Button" parent="."]
offset_left = 5.0
offset_top = 200.0
offset_right = 173.0
offset_bottom = 245.0
theme = ExtResource("3_ewask")
theme_override_font_sizes/font_size = 36
text = "Options
"

[node name="Credits" type="Button" parent="."]
offset_left = 5.0
offset_top = 300.0
offset_right = 173.0
offset_bottom = 345.0
theme = ExtResource("3_ewask")
theme_override_font_sizes/font_size = 36
text = "Credits"

[node name="Quit" type="Button" parent="."]
offset_left = 5.0
offset_top = 400.0
offset_right = 173.0
offset_bottom = 445.0
theme = ExtResource("3_ewask")
theme_override_font_sizes/font_size = 36
text = "Exit
"

[node name="Card" parent="." instance=ExtResource("3_sxsh2")]
position = Vector2(510, 300)
scale = Vector2(5, 5)

[node name="Background" type="ColorRect" parent="."]
z_index = -10
z_as_relative = false
offset_right = 640.0
offset_bottom = 480.0
mouse_filter = 2
color = Color(0.258824, 0.129412, 0.211765, 1)

[node name="Blip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_sii4n")
bus = &"SFX"

[connection signal="mouse_entered" from="NewGame" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="NewGame" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="Options" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Credits" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="card_clicked" from="Card" to="." method="new_card"]
